[gd_scene load_steps=5 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://board.tscn" type="PackedScene" id=2]
[ext_resource path="res://pause.tscn" type="PackedScene" id=3]
[ext_resource path="res://title.tscn" type="PackedScene" id=4]

[node name="main" type="Node"]
script = ExtResource( 1 )

[node name="MainCtr" type="MarginContainer" parent="."]
margin_top = 1.0
margin_right = 481.0
margin_bottom = 644.0

[node name="board" parent="MainCtr" instance=ExtResource( 2 )]
visible = false
position = Vector2( 0, 93 )

[node name="pause" parent="MainCtr" instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 481.0
margin_bottom = 643.0

[node name="title" parent="MainCtr" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 481.0
margin_bottom = 643.0
[connection signal="game_over" from="MainCtr/board" to="." method="_on_board_game_over"]
[connection signal="pause" from="MainCtr/board" to="." method="_on_board_pause"]
[connection signal="end_game" from="MainCtr/pause" to="." method="_on_pause_end_game"]
[connection signal="start" from="MainCtr/title" to="." method="_on_title_start"]
